Split gateway middleware from service middleware